# agent-browser

./: .gitignore  CHANGELOG.md  README.md  agent-browser-daemon-architecture.md  pyproject.toml
.github/workflows/: smoke.yml  test.yml
docs/: transparent-browser-architecture.md
examples/: benchmark_savings.py  golden_tasks.json  production_deploy.md  semantic_query_demo.py  smoke_test.py  sse_client.py  sse_client.ts
src/semantic_browser/: engine.py  event_bus.py  result.py
src/semantic_browser/agent/: __init__.py  loop.py
src/semantic_browser/assets/: README.md
src/semantic_browser/bench/: __init__.py  runner.py
src/semantic_browser/browser/: controller.py  pool.py
src/semantic_browser/classifier/: heuristic.py  llm_enhanced.py
src/semantic_browser/cli/: __init__.py  main.py  repl.py
src/semantic_browser/client/: __init__.py  cli.py
src/semantic_browser/crawler/: runner.py
tests/: Dockerfile.sb  T103_agent_ecom_report.md  T108_real_test_report.md  k8s_long_term_monitor.py  k8s_manifest.yaml  test_agent_amazon.py  test_cli.py  test_concurrency.py  test_core.py  test_crash_recovery.py  test_daemon.py  test_drain_load.py  test_engine.py  test_engine_browse_resilience.py  test_extractor.py  test_http_cache_e2e.py  test_integrations.py  test_llm_bench.py  test_llm_e2e.py  test_mcp_daemon_cache.py  test_mcp_roundtrip.py  test_mcp_server.py  test_providers.py  test_query_correctness.py  test_query_e2e.py  test_repl.py  test_semantic_query.py  test_snapshot.py  test_ssrf.py  test_t108_fallback.py  test_token_budget.py  test_vision.py
(+45 files in other folders)
